src/pages/landing/Landing.css
/*** HERO COMPONENT ***/

.hero {
  position: relative;
  margin-top: -5rem;
  padding-top: 5rem;
  height: 100vh;
  background-image: repeating-linear-gradient(
      307deg,
      rgba(185, 242, 255, 0.05) 0px,
      rgba(185, 242, 255, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      rgba(185, 242, 255, 0.05) 11px,
      rgba(185, 242, 255, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    repeating-linear-gradient(
      352deg,
      rgba(185, 242, 255, 0.05) 0px,
      rgba(185, 242, 255, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      rgba(185, 242, 255, 0.05) 11px,
      rgba(185, 242, 255, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    repeating-linear-gradient(
      262deg,
      rgba(185, 242, 255, 0.05) 0px,
      rgba(185, 242, 255, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      rgba(185, 242, 255, 0.05) 11px,
      rgba(185, 242, 255, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    repeating-linear-gradient(
      397deg,
      rgba(185, 242, 255, 0.05) 0px,
      rgba(185, 242, 255, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      rgba(185, 242, 255, 0.05) 11px,
      rgba(185, 242, 255, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    linear-gradient(352deg, rgba(30, 0, 255, 0.9), rgba(235, 249, 255, 0.76));
  position: relative;
}

.hero-center {
  height: 100%;
  display: grid;
  align-items: center;
}

.hero .underline {
  margin-bottom: 0.5rem;
  margin-left: 0;
}
.hero-info {
  /* background: var(--clr-primary-10); */
  grid-row: 1/1;
  /* grid-column: 1 / span 5; */
}
.hero-img {
  display: none;
}
.hero-info h4 {
  color: var(--clr-primary-10);
}
.hero-icons {
  justify-items: flex-start;
}
.hero .btn {
  margin-top: 1.25rem;
}

@media screen and (min-width: 992px) {
  .hero-center {
    grid-template-columns: repeat(12, 1fr);
  }

  .hero h4 {
    font-size: 0.85rem;
  }
  .hero-info {
    grid-row: 1/2;
    width: 30rem;
  }
  .hero-img {
    width: 30rem;
    display: inline-block;
    grid-row: 1/1;
    grid-column: 7/-2;
    margin-bottom: 7rem;
    margin-left: 7rem;
  }
}
@media screen and (min-width: 1170px) {
  .hero h4 {
    font-size: 1rem;
  }

  .hero-info {
    grid-column: 1 / span 8;
  }

  .hero h4 {
    line-height: 1;
  }
}

/* DETAILS */

.details-section {
  margin-top: -5rem;
  padding-top: 10rem;
  height: 90vh;
  background: var(--clr-primary-30);
  position: relative;
}

.details {
  background: var(--clr-white);
  padding: 3rem 1.5rem;
  margin-bottom: 2rem;
  border-radius: var(--radius);
  text-align: center;
  -webkit-transition: var(--transition);
  transition: var(--transition);
}
.details-icon {
  font-size: 2rem;
  margin-bottom: 1.5rem;
}
.details .underline {
  width: 3rem;
  height: 0.12rem;
  -webkit-transition: var(--transition);
  transition: var(--transition);
}
.details p {
  -webkit-transition: var(--transition);
  transition: var(--transition);
}
.details:hover {
  background: var(--clr-primary-3);
  color: var(--clr-primary-9);
}
.details:hover p {
  color: var(--clr-primary-9);
}
.details:hover .underline {
  background: var(--clr-primary-9);
}
@media screen and (min-width: 676px) {
  .details-center {
    display: grid;
    grid-template-columns: 1fr 1fr;
    -webkit-column-gap: 2rem;
    -moz-column-gap: 2rem;
    column-gap: 2rem;
  }
}
@media screen and (min-width: 992px) {
  .details-center {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

/**** ACTIONS *****/

.action {
  background-image: repeating-linear-gradient(
      135deg,
      hsla(64, 83%, 54%, 0.05) 0px,
      hsla(64, 83%, 54%, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      hsla(64, 83%, 54%, 0.05) 11px,
      hsla(64, 83%, 54%, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    repeating-linear-gradient(
      180deg,
      hsla(64, 83%, 54%, 0.05) 0px,
      hsla(64, 83%, 54%, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      hsla(64, 83%, 54%, 0.05) 11px,
      hsla(64, 83%, 54%, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    repeating-linear-gradient(
      90deg,
      hsla(64, 83%, 54%, 0.05) 0px,
      hsla(64, 83%, 54%, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      hsla(64, 83%, 54%, 0.05) 11px,
      hsla(64, 83%, 54%, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    repeating-linear-gradient(
      225deg,
      hsla(64, 83%, 54%, 0.05) 0px,
      hsla(64, 83%, 54%, 0.05) 1px,
      transparent 1px,
      transparent 11px,
      hsla(64, 83%, 54%, 0.05) 11px,
      hsla(64, 83%, 54%, 0.05) 12px,
      transparent 12px,
      transparent 32px
    ),
    linear-gradient(180deg, rgb(41, 27, 158), rgb(144, 215, 255));
}

/**** Custom Wave Shape Hero ****/
.custom-shape-divider-bottom-1615009014 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.custom-shape-divider-bottom-1615009014 svg {
  position: relative;
  display: block;
  width: calc(165% + 1.3px);
  height: 88px;
}

.custom-shape-divider-bottom-1615009014 .shape-fill {
  fill: #ffffff;
}

/** For tablet devices **/
@media (min-width: 768px) and (max-width: 1023px) {
  .custom-shape-divider-bottom-1615009014 svg {
    width: calc(165% + 1.3px);
    height: 117px;
  }
}

/** For mobile devices **/
@media (max-width: 767px) {
  .custom-shape-divider-bottom-1615009014 svg {
    width: calc(141% + 1.3px);
    height: 63px;
  }
}

/**** Custom Wave Shape Action ****/
.custom-shape-divider-top-1615070323 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

.custom-shape-divider-top-1615070323 svg {
  position: relative;
  display: block;
  width: calc(180% + 1.3px);
  height: 98px;
  transform: rotateY(180deg);
}

.custom-shape-divider-top-1615070323 .shape-fill {
  fill: #ffffff;
}

/** For tablet devices **/
@media (min-width: 768px) and (max-width: 1023px) {
  .custom-shape-divider-top-1615070323 svg {
    width: calc(121% + 1.3px);
    height: 47px;
  }
}

/** For mobile devices **/
@media (max-width: 767px) {
  .custom-shape-divider-top-1615070323 svg {
    width: calc(105% + 1.3px);
    height: 22px;
  }
}

